@@ -1,0 +1,45 @@
+use strict;
+use warnings;
+
+use Test::More 0.96;
+use if $ENV{AUTHOR_TESTING}, 'Test::Warnings';
+use Test::Deep;
+use Test::DZil;
+use Test::Fatal;
+use Path::Tiny;
+
+$ENV{V} = '1.23';
+
+my $tzil = Builder->from_config(
+    { dist_root => 'does-not-exist' },
+    {
+        add_files => {
+            path(qw(source dist.ini)) => dist_ini(
+                { # configs as in simple_ini, but no version assignment
+                    name     => 'DZT-Sample',
+                    abstract => 'Sample DZ Dist',
+                    author   => 'E. Xavier Ample <example@example.org>',
+                    license  => 'Perl_5',
+                    copyright_holder => 'E. Xavier Ample',
+                },
+                'GatherDir',
+                'VersionFromMainModule',
+            ),
+            path(qw(source lib DZT Sample.pm)) => "package DZT::Sample;\nour \$VERSION = '0.002';\n1",
+        },
+    },
+);
+
+$tzil->chrome->logger->set_debug(1);
+is(
+    exception { $tzil->build },
+    undef,
+    'build proceeds normally',
+);
+
+is($tzil->version, '1.23', 'version used from environment, rather than extracted from main module');
+
+diag 'got log messages: ', explain $tzil->log_messages
+    if not Test::Builder->new->is_passing;
+
+done_testing;
