@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+- allow $V environment variable to override the version.
+
 0.03     2017-06-13
 
 - Require Module::Metadata 1.000005 or greater. Earlier versions are missing a
